# dynamite-dogs

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/api/routers/: rag.py
app/engine/: index.py  load.py  prompts.py
app/gradio_ui/: chat_ui.py  load_ui.py  ui.py
app/models/: models.py
